--- a/3D/20240115-render-model/package.json
+++ b/3D/20240115-render-model/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.0",
     "three": "^0.160.0",
     "webpack": "^5.89.0",
