--- a/webpackGuides/20240116-chapter6-author-libraries/package.json
+++ b/webpackGuides/20240116-chapter6-author-libraries/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --env goal=local --env production --progress",
+    "json": "webpack --json > output.json"
   },
   "keywords": [],
   "author": "",
@@ -13,5 +14,8 @@
     "lodash": "^4.17.21",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "lodash-es": "^4.17.21"
   }
 }
