--- a/swiftPractice/.gitIgnore
+++ b/swiftPractice/.gitIgnore
@@ -2,13 +2,6 @@
 *.DS_Store
 
 # Xcode
-# build/
-# DerivedData/
-# *.pbxuser
-# !default.pbxuser
-# *.xcworkspace
-# !*.xcworkspace
-# xcuserdata/
-# *.xccheckout
-# *.xcscmblueprint
 **.xcodeproj
+**.xcworkspace
+**.xcplayground
